css/style.css
/* ... */
            .timeline > li .timeline-panel:before {
                right: auto;
                left: -15px;
                border-right-width: 15px;
                border-left-width: 0;
            }

            .timeline > li .timeline-panel:after {
                right: auto;
                left: -14px;
                border-right-width: 14px;
                border-left-width: 0;
            }

        .timeline > li .timeline-image {
            z-index: 100;
            position: absolute;
            left: 0;
            width: 70px;
            height: 70px;
            margin-left: 0;
            border: 1px solid #eee;
            border-radius: 100%;
            text-align: center;
            background: #fff;
        }

            .timeline > li .timeline-image h4 {
                margin-top: 20px;
                font-size: 14px;
                text-transform: uppercase;
            }

        .timeline > li.timeline-inverted > .timeline-panel {
            float: right;
            padding: 0 20px 0 100px;
            text-align: left;
        }

            .timeline > li.timeline-inverted > .timeline-panel:before {
                right: auto;
                left: -15px;
                border-right-width: 15px;
                border-left-width: 0;
            }

            .timeline > li.timeline-inverted > .timeline-panel:after {
                right: auto;
                left: -14px;
                border-right-width: 14px;
                border-left-width: 0;
            }

        .timeline > li:last-child {
            margin-bottom: 40px;
        }

    .timeline .timeline-heading h4 {
        margin-top: 0;
        text-transform: uppercase;
        font-size: 16px;
    }

    .timeline .timeline-heading h2 {
        margin-top: 30px;
    }

    .timeline .timeline-heading h4.subheading {
        text-transform: none;
        color: #629ca7;
        font-size: 20px;
    }

    .timeline .timeline-body > p, .timeline .timeline-body > ul {
        margin-bottom: 0;
    }
/* Contact Section */
#contact {
    padding: 100px 0 40px 0;
    color: #121d1f;
    background: #7bc3d1;
}

    #contact h2 {
        color: #fff;
    }

    #contact hr {
        background: rgba(255,255,255,0.3);
    }

    #contact h3 {
        padding-top: 20px;
        font-size: 20px;
        font-weight: 400;
        color: #fff;
    }

    #contact form {
        padding: 30px 0;
    }

    #contact i.fa {
        color: #121d1f;
        margin-bottom: 10px;
    }

    #contact .text-danger {
        color: #E87E04;
        text-align: left;
    }

label {
    font-size: 12px;
    font-weight: 400;
    font-family: 'Open Sans', sans-serif;
    float: left;
}

#contact .form-control {
    display: block;
    width: 100%;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #2c3e50;
    background-color: rgba(255,255,255,0.8);
    background-image: none;
    border: 0;
    border-radius: 2px;
    -webkit-box-shadow: none;
    box-shadow: none;
    -webkit-transition: none;
    -o-transition: none;
    transition: none;
}

    #contact .form-control:focus {
        border-color: inherit;
        outline: 0;
        -webkit-box-shadow: transparent;
        box-shadow: transparent;
    }

.form-control::-webkit-input-placeholder {
    color: #2c3e50;
}

.form-control:-moz-placeholder {
    color: #2c3e50;
}

.form-control::-moz-placeholder {
    color: #2c3e50;
}

.form-control:-ms-input-placeholder {
    color: #2c3e50;
}

#contact .social {
    margin-top: 60px;
}

    #contact .social ul li {
        display: inline-block;
        margin: 0 20px;
    }

    #contact .social i.fa {
        font-size: 30px;
        padding: 4px 5px;
        color: #fff;
        transition: all 0.5s;
    }

        #contact .social i.fa:hover {
            color: #121d1f;
        }

#contact .btn {
    background-color: transparent;
    border: 1px solid #fff;
    border-radius: 0;
    padding: 10px 20px;
    color: #fff;
    margin-top: 15px;
}

    #contact .btn:hover, #contact .btn:focus {
        background-color: #121d1f;
        border: 1px solid #121d1f;
    }

.btn:active, .btn.active {
    background-image: none;
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

    a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
        outline: none;
        outline-offset: none;
    }
/* Footer Section*/
#footer {
    background: #121d1f;
    color: #7d8384;
    padding: 30px 0 25px 0;
}

    #footer p {
        font-size: 13px;
    }

    #footer a {
        color: #a0a5a5;
    }

        #footer a:hover {
            color: #7bc3d1;
        }

@media(max-width: 768px) {
    .intro .intro-box {
        background-color: rgb(0,0,0);
        background-color: rgba(0,0,0, .5);
        padding: 5px 5px 5px 5px
    }

    .portfolio-items > div {
        width: 100%
    }

    .portfolio-items > div img {
        max-height: 100%;
        margin: auto;
    }
}
/* ... */

